--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.2
-  sizer: ^2.0.15
+  flutter_screenutil: ^5.5.3+2
+  provider: ^6.0.3
+  path_provider: ^2.0.11
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
